--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
     "react-router": "^7.0.2",
-    "recoil": "^0.7.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
